--- a/greet.html
+++ b/greet.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset='UTF-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-<link rel='stylesheet' href='https://xolyn.github.io/font.css'>
+<link rel='stylesheet' href='./font.css'>
 <title>Document</title>
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap');
+  /* @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap'); */
 video::-webkit-media-controls {
   display: none !important;
 }
@@ -19,7 +19,7 @@ button#su:hover{background-color: rgba(255,255,255,.3);}
 }
 </style>
 </head>
-<body style="margin: 0;  font-family: 'pretendard', 'appletc'">
+<body style="margin: 0;  font-family: 'SarasaGothicK'">
 <div style="display: flex; width: 100dvw; height: 100dvh;">
 <video style="object-fit:cover;position: fixed; top:0; left:0; width: 100%; height: 100%;pointer-events: none;" autoplay loop muted playsinline>
     <source src="https://f.zly.vg/assets/gr.mp4" type="video/mp4">
