--- a/.bu/prevIndex/index0.html
+++ b/.bu/prevIndex/index0.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0, user-scalable=no">
     <link rel="icon" href="https://f.xoy.one/assets/logo.png" type="image/png">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-        /* @font-face { font-family: cour; src: url("fonts/cour.ttf"); }  */
+        @font-face { font-family: cour; src: url("fonts/cour.ttf"); } 
     body{
         text-align: left;
         margin-left: 10vw;
@@ -66,7 +65,7 @@
 <!-- <a href="simple.html">Lingyu Zhou</a> -->
 <b>Lingyu Zhou</b>
 
-<p><a href="https://khentmt.com">Founder</a> and <a href="https://cornell.edu">student</a>, exploring the numbers and the connections behind. Crafting insightful data narratives from complex systems by blending applied mathematics and computer science technology.</p>
+<p>Exploring the numbers and the connections behind. Crafting insightful data narratives from complex systems by blending applied mathematics and computer science technology, founder of <a href="https://khentmt.com">KH Entertainment</a>.
 
 <p><a href="" id="emailLink">e-mail</a> 
     <!-- mailto:lz568@cornell.edu -->
