--- a/convr.html
+++ b/convr.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://google-fonts.mirrors.sjtug.sjtu.edu.cn/css2?family=Inter:wght@400..900&display=swap">
     <link rel="stylesheet" href="https://fastly.jsdelivr.net/npm/lucide-static@latest/font/lucide.css">
-    <title>Template</title>
+    <title>Convr</title>
     <style>
         :root{
             --outer-margin: .5rem;
@@ -40,15 +40,16 @@
 
         a:hover{ filter: contrast(1); }
 
-        input, textarea{border: 1px solid color-mix(in srgb, var(--button-color) 95%, black 5%); border-radius: 5.00px;}
+        input, textarea{border: 1px solid color-mix(in srgb, var(--button-color) 95%, black 5%); border-radius: 5.00px; resize: vertical; }
 
     </style>
 </head>
 <body style="margin: var(--outer-margin); background-color: var(--outer-color); font-family: var(--font-family);">
     <nav class="title" style="margin-bottom: var(--outer-margin); font-size: xx-large; padding: 1rem 0; font-weight: 900; ">
-        <span class="icon-refresh-ccw-dot" style="font-size: xx-large;"></span>&nbsp;<span class="icon-sparkle" style="font-size: xx-large;"></span>
+        <span class="icon-refresh-ccw-dot" style="font-size: xx-large;"></span>&nbsp;Convr
     </nav>
     <main style="background-color: var(--inner-color); padding: var(--inner-margin) max(6%, calc(50% - 400px));">
+      <p>A set of tools for conversions.</p>
         <h1>hover → inline attribute</h1>
         <h3>When not hovered:</h3>
       
