--- a/fontcss.html
+++ b/fontcss.html
@@ -743,7 +743,11 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
 </div>
 
 <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
-<script src="https://f.zly.vg/jq.js"></script>
+<script
+src="https://code.jquery.com/jquery-3.7.1.min.js"
+integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+crossorigin="anonymous"></script>
+    
 <script src="js/fontDrop.js"></script>
 <script>
 function delay(){
