Add Inter font-face definition to fontcss.html

--- a/fontcss.html
+++ b/fontcss.html
@@ -9,12 +9,15 @@
 <link rel='stylesheet' href='ir.css'>
 <!-- <link rel="stylesheet" href="https://f.zly.vg/css/details.css"> -->
 <link rel="stylesheet" href="widgets/widgets.css">
-<link rel="preconnect" href="https://rsms.me/">
-<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css'>
 
 <title>fonts repo</title>
 <style>
+@font-face {
+    font-family: 'Inter';
+    src: url('https://typekit.netlify.app/inter/InterLatin.woff2');
+}
+    
 @font-face {
     font-family: semoji;
     src: url('fonts/segoe-ui-emoji.ttf');
